# e2e-public

./: .gitignore  LICENSE  README.md  pyproject.toml  sonar-project.properties
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql.yml  harness-metadata-check.yml  marker-drift-check.yml  verify-latest.yml  verify-profiles.yml  verify-public-manual.yml  verify-public-scheduled.yml  verify-release-scheduled.yml  verify-release.yml  verify-tag.yml  verify.yml
docs/: ci-profiles.md  evidence-template.md  production-validation-runbook.md  verification-modes.md
fixtures/expected-output/: rust-build-pass.txt
fixtures/policies/: allow-deny-basic.yaml  sample-allow-policy.yaml  sample-deny-network-policy.yaml
metadata/: harness.yaml
scripts/: generate_harness_metadata.py  install-from-branch.sh  install-from-release.sh  install-from-source.sh  install-from-tag.sh  make-evidence-bundle.sh  report-failure.sh  resolve-refs.sh  summarize-run.sh  verify-public-stack.sh
src/aasm_verify/: __init__.py  bundle.py  cli.py  doctor.py  installers.py  pathsafe.py  rc_pending.py  refs.py  releases.py  reports.py  runners.py  skip_audit.py
tests/: conftest.py  test_bundle.py  test_cli_report.py  test_doctor.py  test_marker_audit.py  test_pathsafe.py  test_refs.py  test_release_assets.py  test_reports.py  test_runners.py  test_skip_audit.py  test_skip_audit_hook.py
tests/behavioral/: __init__.py  test_go_with_core.py  test_go_without_core.py  test_node_with_core.py  test_node_without_core.py  test_python_with_core.py  test_python_without_core.py
tests/compat/: matrix.py  summary.py  test_failure_labelling.py  test_live_combinations.py  test_matrix_config.py  test_matrix_coverage.py  test_matrix_summary.py
tests/conformance/: __init__.py  smoke-test-conformance.sh  test_actionable_messages.py  test_enforcement_mode_parity.py  test_event_payload_shape.py  test_invalid_policy.py  test_invalid_request.py  test_verdict_table.py  test_verdict_table_live.py
tests/contract/: test_enforcement_mode_parity.py
tests/dashboard/: __init__.py  _support.py  manifest.py  test_browser_smoke.py  test_build_smoke.py  test_manifest.py
tests/examples/: __init__.py  conftest.py  manifest.py  smoke-test-examples.sh  test_clean_env_go.py  test_clean_env_node.py  test_clean_env_python.py  test_clean_tempdir.py  test_manifest.py
tests/fixtures/: pytest-report-fail.json  pytest-report-mixed.json  pytest-report-pass.json
tests/fixtures/compat/: compatibility-matrix.json
tests/fixtures/conformance/: enforcement-mode-parity.json  event-payload-shapes.json  invalid-policies.json  invalid-requests.json  verdict-cases.json
tests/fixtures/release/: sample_SHA256SUMS  sample_release_assets.json
tests/install/: _support.py  install_matrix.py  smoke-test-rust-build.sh  test_install_matrix.py
tests/live/: __init__.py  api_server.py  build.py  conftest.py  core_source.py  enforcement.py  framework_drivers_go.py  framework_live.py  gateway.py  gateway_grpc.py  node_frameworks.py  runtime.py  runtime_client.py  sdk_client.py  sdk_drivers.py  test_e2e_go.py  test_e2e_node.py  test_e2e_python.py  test_framework_go_langchaingo.py  test_framework_node_langchain.py  test_framework_node_langgraph.py  test_framework_node_mastra.py  test_framework_node_openai_agents.py  test_framework_node_vercel_ai.py  test_framework_python_agno.py  test_framework_python_coverage.py  test_framework_python_crewai.py  test_framework_python_google_adk.py  test_framework_python_haystack.py  test_framework_python_langchain.py  test_framework_python_langgraph.py  test_framework_python_llamaindex.py  test_framework_python_mcp.py  test_framework_python_microsoft_agent_framework.py  test_framework_python_openai_agents.py  test_framework_python_pydantic_ai.py  test_framework_python_smolagents.py  test_live_gateway.py  test_live_runtime.py  test_sdk_drivers.py  (+4 more)
tests/live/drivers/: enforce_allow.mjs
tests/live/drivers/go/: enforce_allow.go  go.mod  go.sum
tests/live/drivers/go/framework/: framework_agent.go  go.mod  go.sum
tests/live/drivers/node-frameworks/: .gitignore  _governance.mjs
tests/live/drivers/node-frameworks/zod3-frameworks/: langchain.mjs  langgraph.mjs  mastra.mjs  package-lock.json  package.json  vercel-ai.mjs
tests/live/drivers/node-frameworks/zod4-frameworks/: openai-agents.mjs  package-lock.json  package.json
tests/live/fixtures/policies/: allow-deny-enforcement.yaml  minimal.yaml
tests/public/: conftest.py  test_examples.py  test_go_sdk.py  test_homebrew_install.py  test_installer_components.py  test_node_sdk.py  test_package_install.py  test_policy_conformance.py  test_python_sdk.py  test_release_artifacts.py  test_runtime_cli.py
tests/release/: checksums.py  conftest.py  evidence.py  manifest.py  test_asset_list.py  test_asset_manifest.py  test_binary_version.py  test_evidence_table.py  test_integrity.py  test_sdk_metadata.py
tests/sdk/: smoke-test-go-sdk.sh  smoke-test-node-sdk.sh  smoke-test-python-sdk.sh
verification-reports/: AAASM-2221-verification.md  AAASM-2227-verification.md  AAASM-2228-verification.md  AAASM-2229-scheduled-workflows-verification.md  AAASM-2230-verification.md  AAASM-2976-live-gateway-fixture-verification.md  AAASM-2985-sdk-transport-investigation.md  AAASM-2985-verification.md  AAASM-2986-python-install-matrix-verification.md  AAASM-2987-node-install-matrix-verification.md  AAASM-2988-go-install-matrix-verification.md  AAASM-2989-runtime-reorientation-verification.md  AAASM-2990-python-without-core-failopen-verification.md  AAASM-2991-node-without-core-verification.md  AAASM-2992-go-without-core-verification.md  AAASM-2993-verification.md
verification-reports/base-branch-2026-06/: regression.md
verification-reports/releases/: README.md  TEMPLATE.md
