[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aasm-verify"
version = "0.0.1"
description = "Public integration verification CLI for Agent Assembly"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# Opt-in extra for the dashboard browser smoke (AAASM-3154 AC3): installs
# Playwright so `tests/dashboard/test_browser_smoke.py` can launch headless
# Chromium. Not a default dependency ŌĆö a plain `uv sync` stays browser-free and
# the smoke skip-guards on its absence (AAASM-3146). After installing, run
# `playwright install chromium` to fetch the browser binary.
browser = ["playwright>=1.50"]

# Opt-in extra for the live verdict-table conformance variant (AAASM-3742):
# installs grpcio + grpcio-tools so `tests/conformance/test_verdict_table_live.py`
# can codegen the PolicyService stubs from the core `proto/` tree and drive
# `CheckAction` against a real spawned `aa-gateway`. Not a default dependency ŌĆö
# a plain `uv sync` stays gRPC-free and the live test skip-guards on its absence
# (mirroring the `cargo`/`_core` skip-guards in the rest of the live suite).
grpc = ["grpcio>=1.60", "grpcio-tools>=1.60"]

# Opt-in extra for the AAASM-3525 Python framework live smokes
# (`tests/live/test_framework_python_*.py`). These do an in-process
# `import agent_assembly` *and* import the AI-agent framework under test, so the
# framework package must be present in the *same* venv the test runner uses. The
# verify `live` CI job installs this group (on top of the python-sdk's native
# `_core`) so those cells RUN their allow path instead of skipping ŌĆö skipping in
# CI would make the framework smokes useless (AAASM-3531). A plain local `uv sync`
# stays framework-free and the cells skip cleanly via their per-framework
# `require_framework` / `importorskip` guards (graceful degradation).
#
# Versions are pinned to the lines the AAASM-3525 smokes were authored against
# where known (crewai, openai-agents, mcp); the rest carry a sensible floor.
frameworks = [
    "langchain>=0.3",
    "langgraph>=0.2",
    # Pinned to >=1.102.0 to fix GHSA-cg7w-rg45-pc59 (SSRF bypass via DNS rebinding)
    # and GHSA-cqp8-fcvh-x7r3 (SSRF bypass via URL encoding). Prior floor (0.0.14)
    # was vulnerable; the smokes are unaffected by the API changes in the 1.x line.
    "pydantic-ai>=1.102.0",
    "crewai~=1.14",
    "google-adk>=0.1",
    # LlamaIndex governance smoke (AAASM-3536): the adapter patches the concrete
    # FunctionTool.call / acall hooks. Floor only ŌĆö older 0.10+ lines work too.
    "llama-index-core>=0.10",
    # Floor only: crewai~=1.14 constrains mcp to <1.27, so the AAASM-3525 `~=1.27`
    # intent cannot co-resolve with crewai. Take crewai's compatible line.
    "mcp>=1.26",
    "openai-agents~=0.17",
    "haystack-ai~=2.30",
    "smolagents>=1.0,<2.0",
    # AAASM-3537: the Agno (formerly Phidata) adapter governs
    # agno.tools.function.FunctionCall.execute. Authored against the 2.6.x line.
    "agno~=2.6",
    # Microsoft Agent Framework (AAASM-3538). Pinned to the first stable 1.x line
    # the smoke was authored against. NOTE: `agent-framework` pulls pre-release
    # sub-distributions (e.g. `agent-framework-azure-ai-search`), so an installer
    # that does not allow pre-releases (uv) needs `--prerelease=allow` ŌĆö the CI
    # install step (verify-profiles.yml) passes it for this extra.
    "agent-framework>=1.9,<2",
]

[project.scripts]
aasm-verify = "aasm_verify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aasm_verify"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-json-report>=1.5",
    "pytest-xdist>=3.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live-core tests build + run aa-runtime / aa-gateway from source ŌĆö opt in with `-m live`.
addopts = "-m 'not live'"
markers = [
    "runtime: Runtime CLI smoke tests",
    "sdk: SDK init smoke tests (Python, Node.js, Go)",
    "examples: Examples repo smoke tests",
    "conformance: Policy allow/deny conformance smoke tests",
    "release: Release artifact and registry install verification tests",
    "live: Live-core tests that build and run aa-runtime / aa-gateway from source",
    "e2e: Live SDKŌåÆruntime policy enforcement end-to-end tests",
    "compat: Cross-version runtime├ŚSDK compatibility matrix tests",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
