[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aasm-verify"
version = "0.0.1"
description = "Public integration verification CLI for Agent Assembly"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# Opt-in extra for the dashboard browser smoke (AAASM-3154 AC3): installs
# Playwright so `tests/dashboard/test_browser_smoke.py` can launch headless
# Chromium. Not a default dependency — a plain `uv sync` stays browser-free and
# the smoke skip-guards on its absence (AAASM-3146). After installing, run
# `playwright install chromium` to fetch the browser binary.
browser = ["playwright>=1.61.0"]

# Opt-in extra for the live verdict-table conformance variant (AAASM-3742):
# installs grpcio + grpcio-tools so `tests/conformance/test_verdict_table_live.py`
# can codegen the PolicyService stubs from the core `proto/` tree and drive
# `CheckAction` against a real spawned `aa-gateway`. Not a default dependency —
# a plain `uv sync` stays gRPC-free and the live test skip-guards on its absence
# (mirroring the `cargo`/`_core` skip-guards in the rest of the live suite).
# NOTE (AAASM-4437 re-audit): grpcio-tools resolves to the 1.81.x line rather
# than the newer 1.82.x line even though the floor here is permissive. This is
# a genuine cross-extra ceiling, not a stale lock: grpcio-tools>=1.82 requires
# protobuf>=7.35.1, but the `frameworks` extra's agent-framework sub-packages
# (agent-framework-a2a -> a2a-sdk, agent-framework-mem0 -> mem0ai) both pin
# protobuf<7.0 even at their own latest releases. Because this project uses a
# single universal uv.lock covering all extras together, that ceiling applies
# even when only installing `grpc` on its own. Re-check when a2a-sdk/mem0ai
# lift their protobuf cap.
grpc = ["grpcio>=1.82.1", "grpcio-tools>=1.60"]

# Opt-in extra for the AAASM-3525 Python framework live smokes
# (`tests/live/test_framework_python_*.py`). These do an in-process
# `import agent_assembly` *and* import the AI-agent framework under test, so the
# framework package must be present in the *same* venv the test runner uses. The
# verify `live` CI job installs this group (on top of the python-sdk's native
# `_core`) so those cells RUN their allow path instead of skipping — skipping in
# CI would make the framework smokes useless (AAASM-3531). A plain local `uv sync`
# stays framework-free and the cells skip cleanly via their per-framework
# `require_framework` / `importorskip` guards (graceful degradation).
#
# Versions are pinned to the lines the AAASM-3525 smokes were authored against
# where known (openai-agents, mcp); the rest carry a sensible floor.
#
# SECURITY: crewai removed (AAASM-4250) — it pulls chromadb which has a CRITICAL
# pre-auth code injection vulnerability (GHSA-f4j7-r4q5-qw2c) with no patched
# version available. The crewai smoke is disabled until chromadb ships a fix.
frameworks = [
    "langchain>=1.3.14",
    "langgraph>=1.2.9",
    # Pinned to >=1.102.0 to fix GHSA-cg7w-rg45-pc59 (SSRF bypass via DNS rebinding)
    # and GHSA-cqp8-fcvh-x7r3 (SSRF bypass via URL encoding). Prior floor (0.0.14)
    # was vulnerable; floor now raised to the resolved 2.x line — the smokes are
    # unaffected by the API changes across the 1.x -> 2.x transition.
    "pydantic-ai>=2.12.0",
    # crewai removed: GHSA-f4j7-r4q5-qw2c (chromadb CRITICAL vuln, no patch)
    "google-adk>=2.5.0",
    # LlamaIndex governance smoke (AAASM-3536): the adapter patches the concrete
    # FunctionTool.call / acall hooks. Floor reflects the resolved 0.14.x line —
    # older 0.10+ lines are believed to still work but are untested here.
    "llama-index-core>=0.14.23",
    # With crewai removed, mcp can leave crewai's vulnerable ~=1.26 pin and use
    # a floor that includes GHSA-vj7q-gjh5-988w / GHSA-jpw9-pfvf-9f58 /
    # GHSA-hvrp-rf83-w775 fixes.
    "mcp>=1.28.1",
    "openai-agents~=0.18",
    "haystack-ai~=2.31",
    "smolagents>=1.26.0,<2.0",
    # AAASM-3537: the Agno (formerly Phidata) adapter governs
    # agno.tools.function.FunctionCall.execute. Authored against the 2.6.x line.
    "agno~=2.8",
    # Microsoft Agent Framework (AAASM-3538). Pinned to the first stable 1.x line
    # the smoke was authored against. NOTE: `agent-framework` pulls pre-release
    # sub-distributions (e.g. `agent-framework-azure-ai-search`), so an installer
    # that does not allow pre-releases (uv) needs `--prerelease=allow` — the CI
    # install step (verify-profiles.yml) passes it for this extra.
    "agent-framework>=1.11.0,<2",
]

[project.scripts]
aasm-verify = "aasm_verify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aasm_verify"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-json-report>=1.5",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live-core tests build + run aa-runtime / aa-gateway from source — opt in with `-m live`.
addopts = "-m 'not live'"
markers = [
    "runtime: Runtime CLI smoke tests",
    "sdk: SDK init smoke tests (Python, Node.js, Go)",
    "examples: Examples repo smoke tests",
    "conformance: Policy allow/deny conformance smoke tests",
    "release: Release artifact and registry install verification tests",
    "live: Live-core tests that build and run aa-runtime / aa-gateway from source",
    "e2e: Live SDK→runtime policy enforcement end-to-end tests",
    "compat: Cross-version runtime×SDK compatibility matrix tests",
    "rc_pending: Correct assertion blocked on an rc-pending upstream fix — visible-but-non-blocking quarantine (AAASM-4479); requires a blocking ticket key in the reason",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
